--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "scripts": {
     "build": "rm -rf dist ; tsc -p tsconfig.build.json",
-    "test": "vitest --run src/useSlice.test.tsx"
+    "test": "npm run test:vitest && npm run test:jest",
+    "test:vitest": "vitest --run src/useSlice.test.tsx src/test/vitest/mockSlice.test.ts",
+    "test:jest": "jest src/test/jest/mockSlice.test.ts"
   },
   "keywords": [
     "react",
@@ -35,17 +37,22 @@
     "@eslint/js": "^9.27.0",
     "@reduxjs/toolkit": "^2.7.0",
     "@testing-library/react": "^16.3.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "^19.1.2",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.27.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.2.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
     "jsdom": "^26.1.0",
     "prettier": "^3.5.3",
     "react": "^19.1.0",
     "react-redux": "^9.2.0",
+    "ts-jest": "^29.3.4",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.33.0",
     "vitest": "^3.1.4"
