--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,4 +1,8 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src/index.ts"]
+  "include": [
+    "src/index.ts",
+    "src/test/vitest/index.ts",
+    "src/test/jest/index.ts"
+  ]
 }
